tests/ui/compound-index-missing-field.rs
use cryptonamo::Encryptable;

#[derive(Encryptable)]
struct User {
    email: String,
    #[cryptonamo(query = "exact", compound = "email#name")]
    name: String,
}

fn main() {}
